change name from toko to market

--- a/app/src/main/res/layout/fragment_market.xml
+++ b/app/src/main/res/layout/fragment_market.xml
@@ -7,7 +7,7 @@
         android:textSize="20dp"
         android:textStyle="bold"
         android:layout_centerInParent="true"
-        android:text="Soon Toko"
+        android:text="Soon Market"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
