--- a/app/src/main/res/layout/activity_market.xml
+++ b/app/src/main/res/layout/activity_market.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundActivity"
-    tools:context=".ui.toko.TokoActivity">
+    tools:context=".ui.market.MarketActivity">
 
     <ImageView
         android:layout_width="match_parent"
