--- a/app/src/main/res/layout/activity_room_chat.xml
+++ b/app/src/main/res/layout/activity_room_chat.xml
@@ -4,14 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackgroundActivity"
     tools:context=".ui.chat.RoomChatActivity">
-
-    <TextView
-        android:layout_centerInParent="true"
-        android:textStyle="bold"
-        android:textSize="24sp"
-        android:text="Chatting Room.."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
