--- a/app/src/main/res/layout/fragment_saya.xml
+++ b/app/src/main/res/layout/fragment_saya.xml
@@ -317,13 +317,15 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white">
 
-
                     <ImageView
-                        android:layout_margin="8dp"
-                        android:layout_alignParentRight="true"
-                        android:src="@drawable/ic_baseline_edit_24"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:src="@drawable/ic_baseline_edit_24"
                         app:tint="@color/grey" />
 
                     <TextView
@@ -391,6 +393,26 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white">
 
+                    <ImageView
+                        android:id="@+id/img_edit_organisasi_saya"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginRight="12dp"
+                        android:src="@drawable/ic_baseline_edit_24"
+                        app:tint="@color/grey" />
+
+                    <ImageView
+                        android:id="@+id/img_add_organisasi_saya"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_toLeftOf="@id/img_edit_organisasi_saya"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginRight="20dp"
+                        android:src="@drawable/ic_baseline_add_24"
+                        app:tint="@color/grey" />
+
                     <TextView
                         android:id="@+id/tv1_organisasi_mahasiswa_detail_mahasiswa"
                         android:layout_width="wrap_content"
@@ -406,7 +428,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/tv1_organisasi_mahasiswa_detail_mahasiswa"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginBottom="8dp"
                         android:clipToPadding="false"
                         android:paddingLeft="16dp"
@@ -430,6 +452,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white">
+
+                    <ImageView
+                        android:id="@+id/img_edit_pengalaman_saya"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginRight="12dp"
+                        android:src="@drawable/ic_baseline_edit_24"
+                        app:tint="@color/grey" />
+
+                    <ImageView
+                        android:id="@+id/img_add_pengalaman_saya"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_toLeftOf="@id/img_edit_pengalaman_saya"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginRight="20dp"
+                        android:src="@drawable/ic_baseline_add_24"
+                        app:tint="@color/grey" />
 
                     <TextView
                         android:id="@+id/tv1_pengalaman_detail_mahasiswa"
@@ -466,6 +508,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white">
+
+                    <ImageView
+                        android:id="@+id/img_edit_keahlian_saya"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginRight="12dp"
+                        android:src="@drawable/ic_baseline_edit_24"
+                        app:tint="@color/grey" />
+
+                    <ImageView
+                        android:id="@+id/img_add_keahlian_saya"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_toLeftOf="@id/img_edit_keahlian_saya"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginRight="20dp"
+                        android:src="@drawable/ic_baseline_add_24"
+                        app:tint="@color/grey" />
 
                     <TextView
                         android:id="@+id/tv1_keahlian_detail_mahasiswa"
@@ -506,6 +568,25 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white">
 
+                    <ImageView
+                        android:id="@+id/img_edit_pendidikan_saya"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginRight="12dp"
+                        android:src="@drawable/ic_baseline_edit_24"
+                        app:tint="@color/grey" />
+
+                    <ImageView
+                        android:id="@+id/img_add_pendidikan_saya"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_toLeftOf="@id/img_edit_pendidikan_saya"
+                        android:layout_marginVertical="10dp"
+                        android:layout_marginRight="20dp"
+                        android:src="@drawable/ic_baseline_add_24"
+                        app:tint="@color/grey" />
                     <TextView
                         android:id="@+id/tv1_pendidikan_detail_mahasiswa"
                         android:layout_width="wrap_content"
